--- a/app/views/home/index_setup.html.erb
+++ b/app/views/home/index_setup.html.erb
@@ -1,4 +1,6 @@
+<div class="container">
 <%= render partial: "/home/header"%>
+</div>
 <section class="page-section mb-0" id="setup">
   <div class="container">
 
@@ -385,4 +387,4 @@ data-izb-delete="{{ product.id }}" class="izb-icon deleteizb js-izb-delete fa-he
       </div>
 
     </div>
-  </section>
+</section>
