--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,13 +1,13 @@
-<div class="row">
+<div class="row align-items-center">
   <div class="col-2">
-    <h1>Клиенты</h1><small>Всего - <%= Client.count%></small>
+    <h2>Клиенты</h2><small>Всего - <%= Client.count%></small>
   </div>
   <div class="col-2 align-self-center">
     <%= link_to '<i class="fa fa-list" aria-hidden="true"></i> Сохранить отчет'.html_safe, clients_otchet_path, title: "Отчет", class: "btn btn-light", role:"button", remote: true%>
   </div>
-  <%= search_form_for @search, html: {class: 'form-inline col-3'}  do |f|%>
-    <div class="form-group">
-      <%= f.search_field :clientid_cont_all, placeholder: 'ID', class: "form-control input-sm"%>
+  <%= search_form_for @search, html: {class: 'form-inline col-3 pl-0 pr-0'}  do |f|%>
+    <div class="input-group input-group-sm">
+      <%= f.search_field :clientid_cont_all, placeholder: 'ID', class: "form-control"%>
       <%= button_tag(type: 'submit', :class => "btn btn-info") do %><span class="oi oi-magnifying-glass"></span><% end %>
       <%= link_to '<span class="oi oi-reload"></span>'.html_safe, clients_path, class: 'btn btn-outline-dark' %>
     </div>
