--- a/app/views/dashboard/users.html.erb
+++ b/app/views/dashboard/users.html.erb
@@ -1,13 +1,13 @@
-<div class="row">
+<div class="row align-items-center">
   <div class="col-3">
     <h1>Пользователи</h1>
     <p>Всего - <%= User.all.count%></p>
   </div>
-  <%= search_form_for @q, url: url_for(controller: 'dashboard', action: 'users'), html: {class: 'form-inline col-9'}  do |f|%>
-    <div class="form-group">
-      <%= f.search_field :name_or_subdomain_or_email_cont_all, placeholder: 'Имя, домен, email', class: "form-control input-sm"%>
-      <%= f.search_field :created_at_datebegin, placeholder: 'создан от', class: "form-control input-sm", autocomplete: "off" %>
-      <%= f.search_field :valid_until_dateend, placeholder: 'valid до', class: "form-control input-sm", autocomplete: "off"%>
+  <%= search_form_for @q, url: url_for(controller: 'dashboard', action: 'users'), html: {class: 'form-inline col-9 pl-0 pr-0'}  do |f|%>
+    <div class="input-group input-group-sm">
+      <%= f.search_field :name_or_subdomain_or_email_cont_all, placeholder: 'Имя, домен, email', class: "form-control"%>
+      <%= f.search_field :created_at_datebegin, placeholder: 'создан от', class: "form-control", autocomplete: "off" %>
+      <%= f.search_field :valid_until_dateend, placeholder: 'valid до', class: "form-control", autocomplete: "off"%>
       <%= button_tag(type: 'submit', :class => "btn btn-info") do %><span class="oi oi-magnifying-glass"></span><% end %>
       <%= link_to '<span class="oi oi-reload"></span>'.html_safe, dashboard_users_path, class: 'btn btn-outline-dark' %>
     </div>
@@ -43,7 +43,7 @@
         <td><%= user.valid_until.present? ? user.valid_until.strftime("%d-%m-%Y") : ''%></td>
         <td><%= Client.client_count(user.id) %></td>
         <td><%= Client.izb_count(user.id) %></td>
-        <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, dashboard_user_destroy_path(user_id: user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, dashboard_user_destroy_path(user_id: user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
