--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,17 +1,26 @@
-<div class="index-header d-flex flex-column flex-md-row align-items-center p-2 px-md-4 bg-white box-shadow">
-  <h4 class="my-0 mr-md-auto font-weight-normal text-center text-lg-left">
-    <a class="logo-text" href="http://k-comment.ru">
-      <%= image_tag "logo_color.png", data: {src: "logo_color.png", title: 'K-comment избранные товары'}, class: 'logo' %>
-    </a>
-  </h4>
-  <nav class="my-md-0 mr-md-0 mr-lg-4 mb-3">
-    <a class="p-2 text-dark" href="/#service">О сервисе</a>
-    <a class="p-2 text-dark" href="/index-setup">Настройка</a>
-    <a class="p-2 text-dark" href="/#price">Стоимость</a>
-    <a class="p-2 text-dark" href="/#o-nas">О нас</a>
-  </nav>
-  <div class="clearfix">
-    <%= link_to t('log_in'), new_session_path('user'), class: 'btn btn-primary float-left mr-2' %>
-    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary float-right' %>
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2">
+  <a class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none" href="http://k-comment.ru">
+    <%= image_tag "logo_color.png", data: {src: "logo_color.png", title: 'K-comment избранные товары'}, class: 'w-100 pe-5' %>
+  </a>
+  <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+    <li>
+      <a class="p-2 text-dark" href="/#service">О сервисе</a>
+    </li>
+    <li>
+      <a class="p-2 text-dark" href="/#price">Цена</a>
+    </li>
+    <li>
+      <a class="p-2 text-dark" href="/#work">Услуги</a>
+    </li>
+    <li>
+      <a class="p-2 text-dark" href="/#o-nas">О нас</a>
+    </li>
+    <li>
+      <a class="p-2 text-dark" href="/index-setup">Помощь</a>
+    </li>
+  </ul>
+  <div class="col-md-3 text-end">
+    <%= link_to t('log_in'), new_session_path('user'), class: 'btn btn-outline-primary me-2' %>
+    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-primary' %>
   </div>
-</div>
+</header>
