--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,11 @@
+<div class="container">
 <%= render partial: "/home/header"%>
-
-<section class="page-section bg-primary text-white mb-0" id="service">
+</div>
+<section class="page-section bg-primary text-white mt-0" id="service">
   <div class="container">
 
     <!-- About Section Heading -->
-    <h1 class="display-4 text-center text-uppercase text-white pb-4">О сервисе</h1>
+    <div class="text-white display-5 mx-auto text-center text-uppercase mb-5">О сервисе</div>
     <!-- About Section Content -->
     <div class="row">
       <div class="col-lg-4 ml-auto">
@@ -20,10 +21,17 @@
     <div class="text-center"><a class="btn btn-primary btn-lg" href="http://demo-themes.myinsales.ru/" target="_blank">Демо магазин</a></div>
   </div>
 </section>
-<section class="page-section mb-0 pb-0" id="service-images">
+<section class="page-section price mt-0" id="price">
+  <div class="display-5 mx-auto text-center text-uppercase mb-5">стоимость использования сервиса</div>
+  <p class="display-4 text-center text-uppercase text-danger fw-bold mb-5">бесплатно</p>
+  <div class="text-center"><%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %></div>
+</section>
+
+<section class="page-section mt-0 mb-0" id="service-images">
   <div class="container">
 
-    <div class="card-deck row">
+    <div class="row">
+        <div class="display-5 text-center text-uppercase mb-5">Основные возможности</div>
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="card ml-0 mr-0">
           <div class="view overlay">
@@ -82,10 +90,10 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <%= image_tag "/k-comment1.png", data: { src: "/k-comment1.png" } %>
+          <%# image_tag "/k-comment1.png", data: { src: "/k-comment1.png" } %>
         </div>
         <div class="carousel-item">
-          <%= image_tag "/k-comment2.png", data: { src: "/k-comment2.png" } %>
+          <%# image_tag "/k-comment2.png", data: { src: "/k-comment2.png" } %>
         </div>
       </div>
       <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -100,81 +108,50 @@
 -->
 </section>
 
-<section class="page-section price pt-3" id="price">
-  <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Стоимость</h1>
-    <p class="lead">Наши тарифные планы.</p>
-  </div>
-
+<section class="page-section price pt-0" id="work">
   <div class="container">
-    <div class="card-deck mb-3 text-center p-3">
-      <div class="card mb-4 box-shadow">
-        <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Бесплатно</h4>
+    <div class="display-5 text-center text-uppercase mb-5">Дополнительные услуги</div>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Наименование услуги</th>
+                <th>Стоимость</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td scope="row" class="text-start">
+                  <span>Стандартная настройка* тем второго поколения</span>
+                  <small class="d-block mt-1">К темам второго поколения относятся все бесплатные темы поддерживающие common v2.<br /> Например темы: Fler, Cross, Аромат 2.0, Фантазия 2.0 и др</small>
+                </td>
+                <td>2500 руб</td>
+                <td><%= link_to "Заказать", new_registration_path('user'), class: 'btn btn-primary' %></td>
+              </tr>
+              <tr>
+                <td scope="row" class="text-start">
+                  <span>Стандартная настройка* тем четвертого поколения</span>
+                  <small class="d-block mt-1">К темам четвертого поколения относятся все бесплатные темы появившиеся в 2021 году.<br />  Например темы: Fine, Mono, Fourth, Gift, Markom, Loft, Stories, Newtone 2.0</small>
+                </td>
+                <td>4000 руб</td>
+                <td><%= link_to "Заказать", new_registration_path('user'), class: 'btn btn-primary' %></td>
+              </tr>
+              <tr>
+                <td scope="row" class="text-start"><span>Стандартная настройка* платных тем второго и четвертого поколения.</span>
+                  <small class="d-block mt-1"> Например темы: Showroom, Furnistore, Flowerstore, E-comm, Revmag, Dotstore</small></td>
+                <td>6000 руб</td>
+                <td><%= link_to "Заказать", new_registration_path('user'), class: 'btn btn-primary' %></td>
+              </tr>
+              <tr>
+                <td scope="row" class="text-start"><span>Настройка индивидуальных тем второго и четвертого поколения</span></td>
+                <td>10000 руб</td>
+                <td><%= link_to "Заказать", new_registration_path('user'), class: 'btn btn-primary' %></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-        <div class="card-body">
-          <h1 class="card-title pricing-card-title">30 дней<small class="text-muted"></small>
-          </h1>
-          <ul class="text-left mt-3 mb-4">
-            <li>Поддержка</li>
-            <li>
-              <a href="/index-setup">Самостоятельная настройка</a>
-            </li>
-          </ul>
-          <%= link_to "Установить", new_registration_path('user'), class: 'btn btn-lg btn-block btn-primary' %>
-        </div>
-      </div>
-      <div class="card mb-4 box-shadow">
-        <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Ежемесячный</h4>
-        </div>
-        <div class="card-body">
-          <h1 class="card-title pricing-card-title">300 р<small class="text-muted"></small>
-          </h1>
-          <ul class="text-left mt-3 mb-4">
-            <li>Поддержка</li>
-            <li>
-              <a href="/index-setup">Самостоятельная настройка</a>
-            </li>
-          </ul>
-          <%= link_to "Установить", new_registration_path('user'), class: 'btn btn-lg btn-block btn-primary' %>
-        </div>
-      </div>
-    </div>
-    <div class="card-deck mb-3 text-center p-3">
-      <div class="card mb-4 box-shadow">
-        <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Пакет 1</h4>
-        </div>
-        <div class="card-body">
-          <h1 class="card-title pricing-card-title">900 р
-            <small class="text-muted">/ 3 месяца</small>
-          </h1>
-          <ul class="text-left mt-3 mb-4">
-            <li>Добавление стандартной кнопки "Добавить в Избранное"</li>
-            <li>Добавление стандартной страницы "Избранное"</li>
-            <li>Поддержка</li>
-          </ul>
-          <%= link_to "Установить", new_registration_path('user'), class: 'btn btn-lg btn-block btn-primary' %>
-        </div>
-      </div>
-      <div class="card mb-4 box-shadow">
-        <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Пакет 2</h4>
-        </div>
-        <div class="card-body">
-          <h1 class="card-title pricing-card-title">1800 р
-            <small class="text-muted">/ 6 месяцев</small>
-          </h1>
-          <ul class="text-left mt-3 mb-4">
-            <li>Пакет 1 + настройка стиля "Добавить в Избранное"</li>
-            <li>Пакет 1 + настройка стиля страницы "Избранное"</li>
-            <li>Поддержка</li>
-          </ul>
-          <%= link_to "Установить", new_registration_path('user'), class: 'btn btn-lg btn-block btn-primary' %>
-        </div>
-      </div>
-    </div>
+        <div class="mt-4"><small>*Стандартная настройка - это кнопка в карточке товара, кнопка в мини-карточке в категории, кнопка в шапке, создание страницы Избранное, кнопка в личном кабинете клиента магазина (Отправить на почту)</small></div>
   </div>
 </section>
 <!-- About Section -->
@@ -182,14 +159,14 @@
   <div class="container">
 
     <!-- About Section Heading -->
-    <h1 class="display-4 text-center text-uppercase text-white pb-4">О нас</h1>
+    <div class="display-5 mx-auto text-center text-uppercase mb-5 text-white">О нас</div>
 
     <!-- About Section Content -->
     <div class="row">
-      <div class="col-lg-4 ml-auto">
-        <p class="lead">Мы - это команда единомышленников, которая собралась чтобы создать решения типовых задач наших клиентов.</p>
+      <div class="col-6 ml-auto">
+        <p class="lead">Мы - это команда единомышленников, которая собралась чтобы создавать решения типовых задач наших клиентов.</p>
       </div>
-      <div class="col-lg-4 mr-auto">
+      <div class="col-6 mr-auto">
         <p class="lead">Мы работаем со следующими технологиями - Ruby on Rils, HTML, CSS, и JavaScript
         </p>
       </div>
