--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,8 +1,9 @@
-<div class="alert-devise">
-  <% flash.each do |key, value| %>
-    <div class="<%= flash_class(key) %> fade show">
-      <a href="#" class="close" data-dismiss="alert">&times;</a>
-      <%= value.html_safe %>
+<%# Rails flash messages styled for Bootstrap 5.0 %>
+<% flash.each do |name, msg| %>
+  <% if msg.is_a?(String) %>
+    <div class="alert alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %> alert-dismissible" role="alert">
+      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
   <% end %>
-</div>
+<% end %>
