--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -3,13 +3,17 @@
   <%%= f.error_notification %>
   <%%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">
+  <div class="row">
+    <div class="col-6">
   <%- attributes.each do |attribute| -%>
     <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %> %>
   <%- end -%>
+</div>
+</div>
+  <div class="row">
+  <div class="col-3 btn-group mt-5">
+    <%%= f.button :submit, class: 'btn btn-success' %>
+    <%%= link_to 'Назад', :back, class: 'btn btn-outline-primary' %>
   </div>
-
-  <div class="form-actions">
-    <%%= f.button :submit %>
   </div>
 <%% end %>
