--- a/app/views/clients/otchet.js.erb
+++ b/app/views/clients/otchet.js.erb
@@ -1,1 +1,2 @@
-$(".alert-devise").html('<%= j render partial: "/layouts/messages" %>');
+$("#main-content").prepend('<%= j render partial: "/layouts/messages" %>');
+$(".alert").delay(4000).slideUp(200, function() { $(this).alert('close'); });
