--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,3 +36,23 @@ body {    overflow-x: hidden;}
     background-repeat: no-repeat;
     height: 40px;
 }
+.messenger_icon {
+  z-index: 999;
+  position: fixed;
+  bottom: 0.5rem;
+  left: 0.5rem;
+  max-width: 45px;
+  text-align: center;
+}
+.messenger_icon a img{
+  cursor: pointer;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  width:100%;
+  height: 100%;
+  margin-bottom: 3px;
+}
+
+.messenger_icon .whatsapp img {background-color:#64bb26;}
+.messenger_icon .telegram img {background-color:#55bef8;}
