--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Редактировать</h1>
-<h4>(Пользователь - <%= @payment.user.subdomain%>, счет номер - <%= @payment.invoice_id%>)</h4>
-<%= render 'form', payment: @payment %>
+<%= render 'form', payment: @payment , page_title: "Редактировать" %>
 
 <%# link_to 'Show', @payment %>
 <%# link_to 'Back', payments_path %>
