--- a/app/views/clients/index_old.html.erb
+++ b/app/views/clients/index_old.html.erb
@@ -18,26 +18,24 @@
 <table class="table table-hover table-condensed table-sm">
   <thead class="thead-light">
     <tr>
-      <th>ID</th>
-      <th>ID INS</th>
+      <th>ID клиента</th>
       <th>ФИО</th>
       <th>Email</th>
-      <th>Phone</th>
       <th>Товары в избранном</th>
-      <th colspan="1"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @clients.each do |client| %>
+    <% @full_clients.each do |client| %>
       <tr>
-        <td><%= link_to client.id, client_path(client) %></td>
-        <td><%= client.clientid%></td>
-        <td><%= client.name %><%= client.surname%></td>
-        <td><%= client.email %></td>
-        <td><%= client.phone %></td>
-        <td><%= client.izb_productid.split(',').size %> шт.</td>
-        <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, client, method: :delete, data: { confirm: 'Вы уверенны?' } %></td>
+        <td><%= client['clientid'] %></td>
+        <td><%= client['fio'] %></td>
+        <td><%= client['email'] %></td>
+        <td><%= client['izb_productid'].split(',').size %> шт.</td>
+<!--        <td><%#= truncate(client['izb_productid'], :length => 30, :omission => '... (и др.)') %></td>-->
+        <td><%= link_to '<span class="oi oi-pencil"></span>'.html_safe, client_path(:id => client['id'], :fio =>  client['fio'], :email => client['email']) %></td>
+        <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, client_path(:id => client['id']), method: :delete, data: { confirm: 'Вы уверенны?' } %></td>
       </tr>
     <% end %>
   </tbody>
