--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -46,7 +46,7 @@
       <tr>
         <!-- <td><%# check_box_tag "product_ids[]", product.id %></td> -->
         <td><%= product.insid %></td>
-        <td><%= render 'one_image', :image_link => Product.get_image(product.insid), image_style: "" %></td>
+        <td><%# render 'one_image', :image_link => Product.get_image(product.insid), image_style: "" %></td>
         <td><%= product.title %></td>
         <td><%= product.price %></td>
         <!-- <td><%# link_to '<span class="oi oi-eye"></span>'.html_safe, product %></td>
